<resources>
    <string name="app_name">AttendanceTest</string>
    <string name="login_device">Login Device</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_id">Device_ID</string>
    <string name="enter_device_hint">Enter Device_ID</string>
    <string name="key">Key</string>
    <string name="enter_key">Enter key</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="attendance">Attendance</string>
    <string name="application">Application</string>
    <string name="loading">Loading</string>
    <string name="warehouse_id">Warehouse_ID:</string>
    <string name="wh_mh007">WH_MH007</string>
    <string name="location">Location:</string>
    <string name="bhiwandi_maharasthra">Bhiwandi, Maharasthra</string>
    <string name="_3">3</string>
</resources>
