<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoadingScreenFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/countdownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:textSize="24sp"
        android:text="3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="55dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/loading"
                android:textColor="@color/purple"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/dotOne"
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_margin="4dp"
                android:src="@drawable/dot"
                app:layout_constraintBottom_toBottomOf="@id/loading"
                app:layout_constraintStart_toEndOf="@+id/loading" />

            <ImageView
                android:id="@+id/dotTwo"
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_margin="4dp"
                android:src="@drawable/dot"
                app:layout_constraintBottom_toBottomOf="@id/loading"
                app:layout_constraintStart_toEndOf="@+id/dotOne" />

            <ImageView
                android:id="@+id/dotThree"
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_margin="4dp"
                android:src="@drawable/dot"
                app:layout_constraintBottom_toBottomOf="@id/loading"
                app:layout_constraintStart_toEndOf="@+id/dotTwo" />

            <TextView
                android:id="@+id/warehouseID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/location"
                android:drawableLeft="@drawable/location"
                android:drawablePadding="12dp"
                android:text="@string/warehouse_id"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/value"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loading" />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/wh_mh007"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/warehouseID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/warehouseID"
                app:layout_constraintTop_toTopOf="@+id/warehouseID" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:drawableStart="@drawable/shipping_and_delivery"
                android:drawableLeft="@drawable/shipping_and_delivery"
                android:drawablePadding="12dp"
                android:text="@string/location"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/value_two"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/warehouseID"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/value_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/bhiwandi_maharasthra"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/location"
                app:layout_constraintTop_toTopOf="@+id/location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>